src/objects/BMCServiceDesk__SYSQVCondition__c.object
<CustomObject>
    <description>This object allows you to store data for the query conditions of QuickViews.</description>
    <fields>
        <fullName>BMCServiceDesk__FKSYSQVFieldInfo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FKSYSQVFieldInfo</label>
        <referenceTo>BMCServiceDesk__SYSQVFieldInfo__c</referenceTo>
        <relationshipLabel>SYSQVConditions (FKSYSQVFieldInfo)</relationshipLabel>
        <relationshipName>SYSQVConditions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKSYSQVQuery__c</fullName>
        <label>FKSYSQVQuery</label>
        <referenceTo>BMCServiceDesk__SYSQVQuery__c</referenceTo>
        <relationshipLabel>SYSQVConditions</relationshipLabel>
        <relationshipName>SYSQVConditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SYSQVOperator__c</fullName>
        <label>SYSQVOperator</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__displaylabel__c</fullName>
        <label>Display Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__groupingOperator__c</fullName>
        <label>Grouping Operator</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__op1IsRuntimeVar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Op1 Is Runtime Var</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__op2IsRuntimeVar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Op2 Is Runtime Var</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__operand1__c</fullName>
        <label>Operand 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__operand2__c</fullName>
        <label>Operand 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__orderIndex__c</fullName>
        <label>Order Index</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quickview Conditions</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>SYSQVCondition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SYSQVConditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>